--- a/Lab08/Lab8_1/index.html
+++ b/Lab08/Lab8_1/index.html
@@ -28,7 +28,7 @@
         padding: 20px;
         border-radius: 10px;
         border: 2px solid #222831;
-        background: linear-gradient(to right, #B31312 50%, #EA906C 50%);
+        background: linear-gradient(to right, #003147 50%, #03a9f4 50%);
         position: relative;
     }
 
